# pkg/errors/httperrors/server.go
@@ -1,0 +1,8 @@
+package httperrors
+
+import "device-manager/pkg/models"
+
+var InternalServerError = models.ErrorResult{Error: &models.ErrorResultError{
+	Code:        "000-001",
+	Description: "Internal server error",
+}}
